fix for row height being too tall on selected test case

--- a/src/styles/TestCaseList.css
+++ b/src/styles/TestCaseList.css
@@ -85,7 +85,7 @@
 .Delete-row,
 .Move-row {
   color: #4b6de9;
-  margin: 5px auto;
+  margin: auto auto;
   opacity: 0.4;
   visibility: hidden;
   cursor: default;
